# neurogen-potts-analysis

./: .gitignore  Makefile  exp_wt_vs_mud_plots.py  process_lobe_output.txt  pyproject.toml
scripts/: analyze.py  analyze_experimental_wrl_metrics.py  compare_detdiff.py  extract_clemens_lineage_metrics.py  extract_wrl_lineage_metrics.py  plot_exp_wrl_histograms.py  plot_exp_wrl_vs_clemens.py  plot_sim_conditions_vs_npz.py  plot_sim_wt_mud_conditions.py  preprocess_lineages_for_viz.py  process_lobe_maxproj.py  process_simdata.py  robustness_analysis.py  visualize_lineage.py
src/: clemens_data_helpers.py  expdata_geo_helpers.py  npz_metrics.py  simdata_geo_helpers.py  wrl_lineage_filtering.py
