[project]
name = "neurogen-potts-analysis"
version = "0.1.0"
description = "Quantitative comparison of average cell volumes and cell counts in experimental versus simulated fly brain segments."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
    "trimesh>=4.11.1",
]
